# wren

./: AGENTS.md  Cargo.toml
.agents/skills/wren-performance/: SKILL.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/wren-extension/: Cargo.toml  build.rs
crates/wren-extension/src/: lib.rs
docs/architecture/: extension-contract.md
docs/principles/: extension.md  functional-testing.md  performance.md  rust.md  self-modification.md
docs/references/: github.com
docs/research/: startup-performance.md
src/: extension.rs  main.rs  profile.rs
tests/: functional.rs
tests/fixtures/extension/: Cargo.toml
tests/fixtures/extension/src/: lib.rs
tools/perf/: Cargo.toml
tools/perf/src/: main.rs
