[workspace]
members = [".", "crates/wren-extension", "tests/fixtures/extension"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.97.1"
repository = "https://github.com/learywood/wren"
publish = false

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

[package]
name = "wren"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "An agent harness."
repository.workspace = true
publish.workspace = true

[dependencies]
libloading = "0.9.0"
wren-extension = { path = "crates/wren-extension" }

[lints]
workspace = true
