[workspace]
members = [".", "crates/wren-extension", "tests/fixtures/extension", "tools/perf"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.97.1"
repository = "https://github.com/learywood/wren"
publish = false

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

[package]
name = "wren"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "An agent harness."
repository.workspace = true
publish.workspace = true

[features]
default = []
profiling = ["dep:tracy-client"]

[dependencies]
libloading = "0.9.0"
tracy-client = { version = "0.18.4", optional = true, default-features = false, features = ["enable", "ondemand", "only-localhost"] }
wren-extension = { path = "crates/wren-extension" }

[profile.profiling]
inherits = "release"
debug = 1

[lints]
workspace = true
