[package]
name = "wren-fixture-extension"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Functional-test fixture for the Wren extension loader."
repository.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wren-extension = { path = "../../../crates/wren-extension" }

[lints]
workspace = true
